--- a/templates/music/album_detail.html
+++ b/templates/music/album_detail.html
@@ -1,28 +1,14 @@
-{% extends "music/liked_songs.html" %}
+{% extends "base.html" %}
 {% load static %}
-
-{% block css %}
+{% block content %}
 <link rel="stylesheet" href="{% static 'css/likedsong.css' %}?{% now " U " %}">
 
-
-{% endblock %}
-
-{% block home %}
-{% endblock %}
-
-{% block search %}
-{% endblock %}
-
-{% block liked-song %}
-active
-{% endblock %}
-
-{% block main %}
+<div class="content">
 <div class="playlist__banner">
 
-	<div class="playlist__left">
-		<div class="playlist__album">
-			<img src="{{ albums.image.url }}" alt="" class="playlist__img">
+    <div class="playlist__left">
+        <div class="playlist__album">
+            <img src="{{ albums.image.url }}" alt="" class="playlist__img">
         </div>
     </div>
     <div class="playlist__right">
@@ -33,61 +19,53 @@ active
 
 </div>
 
-
-<!--play button-->
+<!-- play button -->
 
 <div class="playlist__optionbar">
-<!--     <div class="playlist__play">-->
-<!--       <img src="https://cdn.discordapp.com/attachments/768083738848133130/769476261181128734/image_1.png" alt=""></img>-->
-<!--      </div>-->
-
+    <!-- <div class="playlist__play">-->
+    <!-- <img src="https://cdn.discordapp.com/attachments/768083738848133130/769476261181128734/image_1.png" alt=""></img>-->
+    <!-- </div>-->
 </div>
 
-
-
 <div class="playlist__list">
-    <div class="playlist__header" >
-        <div class="playlist__headerTitle"># Title</div>
+    <div class="playlist__header">
+        <div class="playlist__headerTitle"> Title</div>
         <div class="playlist__headerAlbum">Artist</div>
         <div class="playlist__headerDate">Date Added</div>
-        <div class="playlist__headerDuration">Duration
-        <img src="https://img.icons8.com/pastel-glyph/344/clock--v1.png" alt="">
+        <div class="playlist__headerDuration">
+            Duration
+            <img src="https://img.icons8.com/pastel-glyph/344/clock--v1.png" alt="">
         </div>
     </div>
     <hr class="divider">
 
-
     <div class="playlist__songlist">
-    {% for song in albums.music.all %}
-    <form action="" method="get">
-        <div class="playlist__song playlist__row" onclick='playSong("{{ song.file }}","false","true")'>
-        <div class="playlist__headerTitle">
-          <img class="playlist__albumimg" src="{{song.image.url}}" alt =''/>
-              <a href="{% url "music:detail" song.pk %}">
-          <div class="playlist__songTitle ellipsis_one_line">
-          {{song.name}}
-          </div>
-
-          <textarea name="song" id="song_name_delete" cols="1" rows="1">{{song.name}}</textarea>
-            </a>
-
-          </div>
-            {% for artist in song.artists.all %}
-            <a href="{% url 'artist:artist_detail' pk=artist.pk %}">{{ artist.pseudonym }}
-
-        <div class="playlist__headerAlbum ellipsis_one_line"></div></a>
-            {% endfor %}
-        <div class="playlist__headerDate">{{song.year}}</div>
-        <div class="playlist__headerDuration">
-        {{song.duration}}
-        <button type='submit' class="delete"><img src="https://cdn.discordapp.com/attachments/768083738848133130/777588678028951572/delete-icon-28.jpg" alt=""</button>
-        </div>
-    </div>
-    </form>
-    {% endfor %}
+        {% for song in albums.music.all %}
+        <form action="" method="get">
+            <div class="playlist__song playlist__row" onclick='playSong("{{ song.file }}","false","true")'>
+                <div class="playlist__headerTitle">
+                    <img class="playlist__albumimg" src="{{song.image.url}}" alt=''/>
+                    <a href="{% url "music:detail" song.pk %}">
+                    <div class="playlist__songTitle ellipsis_one_line">
+                        {{song.name}}
+                    </div>
+                    <textarea name="song" id="song_name_delete" cols="1" rows="1">{{song.name}}</textarea>
+                    </a>
+                </div>
+                {% for artist in song.artists.all %}
+                <a href="{% url 'artist:artist_detail' pk=artist.pk %}">{{ artist.pseudonym }}</a>
+                <div class="playlist__headerAlbum ellipsis_one_line"></div>
+                {% endfor %}
+                <div class="playlist__headerDate">{{song.year}}</div>
+                <div class="playlist__headerDuration">
+                    {{song.duration}}
+                    <button type='submit' class="delete"><img src="https://cdn.discordapp.com/attachments/768083738848133130/777588678028951572/delete-icon-28.jpg" alt=""></button>
+                </div>
+            </div>
+        </form>
+        {% endfor %}
     </div>
 
 </div>
-
-
+</div>
 {% endblock %}
