--- a/static/css/FAQ.css
+++ b/static/css/FAQ.css
@@ -1,11 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
 
-* {
-  box-sizing: border-box;
-}
-
 body {
-  background-color: #f0f0f0;
+  background-color: #171918;
   font-family: 'Muli', sans-serif;
 }
 
