--- a/templates/home/FAQ.html
+++ b/templates/home/FAQ.html
@@ -1,71 +1,8 @@
+{% extends "base.html" %}
 {% load static %}
+{% block content %}
 
-<div class="sidebar">
-        <div class="logo">
-             <a href="{% url "home:home" %}">
-                <img src="https://storage.googleapis.com/pr-newsroom-wp/1/2018/11/Spotify_Logo_CMYK_Green.png"
-                    alt="Logo" />
-            </a>
-        </div>
-<div class="navigation">
-            <ul>
-                <li>
-                    <a href="{% url "home:home" %}">
-                        <span class="fa fa-home"></span>
-                        <span>Home</span>
-                    </a>
-                </li>
-
-                <li>
-                    <a href="#">
-                        <span class="fa fa-search"></span>
-                        <span>Search</span>
-                    </a>
-                </li>
-
-                <li>
-                    <a href="#">
-                        <span class="fa fas fa-book"></span>
-                        <span>Your Library</span>
-                    </a>
-                </li>
-            </ul>
-        </div>
-
-        <div class="navigation">
-            <ul>
-                <li>
-                    <a href="#">
-                        <span class="fa fas fa-plus-square"></span>
-                        <span>Create Playlist</span>
-                    </a>
-                </li>
-
-                <li>
-                    <a href="#">
-                        <span class="fa fas fa-heart"></span>
-                        <span>Liked Songs</span>
-                    </a>
-                </li>
-            </ul>
-        </div>
-
-        <div class="policies">
-            <ul>
-                <li>
-                    <a href="#">Cookies</a>
-                </li>
-                <li>
-                    <a href="#">Privacy</a>
-                </li>
-            </ul>
-        </div>
-
-
-    </div>
-<link rel="stylesheet" href="{% static "css/FAQ.css" %}">
-     <link rel="stylesheet" href="{% static "css/home.css" %}">
-<!-- Design on Dribbble: https://dribbble.com/shots/3967265-FAQ -->
+<link rel="stylesheet" href="{% static 'css/FAQ.css' %}">
 
 <div class="anun">
 <h1>Frequently Asked Questions</h1>
@@ -74,10 +11,10 @@
 <div class="faqs-container">
   <div class="faq active">
     <h3 class="faq-title">
-      Why shouldn't we trust atoms?
+      How can I create my playlist
     </h3>
     <p class="faq-text">
-      They make up everything.
+      Buy our premium account
     </p>
     <button class="faq-toggle">
       <i class="fas fa-chevron-down"></i>
@@ -87,10 +24,10 @@
 
   <div class="faq">
     <h3 class="faq-title">
-      What do you call someone with no body and no nose?
+      Do you have any spaecial offors for students?
     </h3>
     <p class="faq-text">
-      Nobody knows.
+      Yes, you can use our  Pro Student account
     </p>
     <button class="faq-toggle">
       <i class="fas fa-chevron-down"></i>
@@ -100,10 +37,10 @@
 
   <div class="faq">
     <h3 class="faq-title">
-      What's the object-oriented way to become wealthy?
+      I have some issuse with my app
     </h3>
     <p class="faq-text">
-      Inheritance.
+      Please connect us
     </p>
     <button class="faq-toggle">
       <i class="fas fa-chevron-down"></i>
@@ -113,10 +50,10 @@
 
   <div class="faq">
     <h3 class="faq-title">
-      How many tickles does it take to tickle an octopus?
+      How many songs i can add in my playlist
     </h3>
     <p class="faq-text">
-      Ten-tickles!
+      It depends on your account type
     </p>
     <button class="faq-toggle">
       <i class="fas fa-chevron-down"></i>
@@ -126,10 +63,10 @@
 
   <div class="faq">
     <h3 class="faq-title">
-      What is: 1 + 1?
+      Why I need to Use Spotify
     </h3>
     <p class="faq-text">
-      Depends on who are you asking.
+      Click About us and explore more
     </p>
     <button class="faq-toggle">
       <i class="fas fa-chevron-down"></i>
@@ -137,6 +74,9 @@
     </button>
   </div>
 </div>
+<br>
+<br>
+<br>
 
 <!-- SOCIAL PANEL HTML -->
 <div class="social-panel-container">
@@ -151,4 +91,4 @@
 
 
 <script src="{% static 'js/FAQ.js' %}"></script>
-
+{% endblock %}
