--- a/templates/main_base.html
+++ b/templates/main_base.html
@@ -126,7 +126,7 @@
 
 
                 <li>
-                        <a href="">
+                        <a href="{% url "user:profile" pk=user.pk %}">
                         Profile</a>
 
                     </li>
