--- a/templates/home/FAQ.html
+++ b/templates/home/FAQ.html
@@ -74,10 +74,10 @@
 <div class="faqs-container">
   <div class="faq active">
     <h3 class="faq-title">
-      Why shouldn't we trust atoms?
+      Why shouldn't we trust your template?
     </h3>
     <p class="faq-text">
-      They make up everything.
+      We can provide you with best Spotify simulations and we are save.
     </p>
     <button class="faq-toggle">
       <i class="fas fa-chevron-down"></i>
@@ -87,10 +87,10 @@
 
   <div class="faq">
     <h3 class="faq-title">
-      What do you call someone with no body and no nose?
+      how can i listen more songs?
     </h3>
     <p class="faq-text">
-      Nobody knows.
+      Buy some account or Log In
     </p>
     <button class="faq-toggle">
       <i class="fas fa-chevron-down"></i>
@@ -100,10 +100,10 @@
 
   <div class="faq">
     <h3 class="faq-title">
-      What's the object-oriented way to become wealthy?
+      Do you have any spacial offers for students?
     </h3>
     <p class="faq-text">
-      Inheritance.
+      Yes, Pro Students account
     </p>
     <button class="faq-toggle">
       <i class="fas fa-chevron-down"></i>
@@ -113,10 +113,10 @@
 
   <div class="faq">
     <h3 class="faq-title">
-      How many tickles does it take to tickle an octopus?
+      How many songs I can add in my account?
     </h3>
     <p class="faq-text">
-      Ten-tickles!
+      it depends on your account type
     </p>
     <button class="faq-toggle">
       <i class="fas fa-chevron-down"></i>
@@ -126,10 +126,10 @@
 
   <div class="faq">
     <h3 class="faq-title">
-      What is: 1 + 1?
+      What Premium account give you?
     </h3>
     <p class="faq-text">
-      Depends on who are you asking.
+      Unlimited ways to listen follow and add song in playlist.
     </p>
     <button class="faq-toggle">
       <i class="fas fa-chevron-down"></i>
