--- a/templates/main_base.html
+++ b/templates/main_base.html
@@ -70,17 +70,6 @@
             </ul>
         </div>
 
-        <div class="policies">
-            <ul>
-                <li>
-                    <a href="#">Cookies</a>
-                </li>
-                <li>
-                    <a href="#">Privacy</a>
-                </li>
-            </ul>
-        </div>
-
 
     </div>
 
@@ -88,23 +77,20 @@
 
     <div class="main-container">
         <div class="topbar">
-            <div class="prev-next-buttons">
-                <button type="button" class="fa fas fa-chevron-left"></button>
-                <button type="button" class="fa fas fa-chevron-right"></button>
+            <div class="search-box">
+                <button class="btn-search"><i class="fas fa-search"></i></button>
+               <input type="text" class="input-search" placeholder="Type to Search...">
             </div>
 
             <div class="navbar">
                 <ul>
                     <li>
-                        <a href="#">Premium</a>
+                        <a href="{% url "payment:payment_detail" %}">Premium</a>
                     </li>
                     <li>
-                        <a href="">Support</a>
+                        <a href="{% url "home:FAQ" %}">Support</a>
                     </li>
-                    <li>
-                        <a href="#">Download</a>
 
-                    </li>
 
  {% if not request.user.is_authenticated %}
                     <li class="divider">|</li>
@@ -122,8 +108,6 @@
 
                 {% else %}
                 <li class="divider">|</li>
-
-
 
                 <li>
                         <a href="{% url "user:profile" pk=user.pk %}">
@@ -172,7 +156,7 @@
                <li><a href="https://artists.spotify.com/ru/home">shipping</a></li>
                <li><a href="#">returns</a></li>
                <li><a href="#">order status</a></li>
-               <li><a href="#">payment options</a></li>
+               <li><a href="{% url "payment:payment_detail" %}">payment options</a></li>
              </ul>
            </div>
            <div class="footer-col">
@@ -184,8 +168,14 @@
                <li><a href="#">dress</a></li>
              </ul>
            </div>
-
-
+             <div class="footer-col">
+                 <h4>follow us</h4>
+                 <div class="social-links">
+                     <a href="#"><i class="fab fa-facebook-f"></i></a>
+                     <a href="#"><i class="fab fa-twitter"></i></a>
+                     <a href="#"><i class="fab fa-instagram"></i></a>
+                     <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                 </div>
          </div>
         </div>
      </footer>
