--- a/templates/music/add_music.html
+++ b/templates/music/add_music.html
@@ -1,74 +1,80 @@
-
-<!-- music/add_music.html -->
-
-
-<!-- music/add_music.html -->
-
 {% extends 'main_base.html' %}
 
 {% block content %}
-  <div class="container">
-    <h2 class="mt-4 mb-4">Add Music</h2>
+  <div class="container" style="margin: left 60px">
+    <h2 class="mt-4 mb-4" style="color:white;">Add Music</h2>
 
     <form method="post" enctype="multipart/form-data">
       {% csrf_token %}
 
-      <div class="form-group">
-        <label for="{{ form.name.id_for_label }}">Name:</label>
+      <div class="form-group" style="color:white;">
+
         {{ form.name }}
+        <label for="{{ form.name.id_for_label }}">Name:</label>
       </div>
 
-      <div class="form-group">
-        <label for="{{ form.category.id_for_label }}">Category:</label>
+      <div class="form-group" style="color:white;">
+
         {{ form.category }}
+          <label for="{{ form.category.id_for_label }}">Category:</label>
       </div>
 
-      <div class="form-group">
-        <label for="{{ form.artist.id_for_label }}">Artist:</label>
+      <div class="form-group" style="color:white;">
+
         {{ form.artist }}
+         <label for="{{ form.artist.id_for_label }}">Artist:</label>
       </div>
 
-      <div class="form-group">
-        <label for="{{ form.album.id_for_label }}">Album:</label>
+      <div class="form-group" style="color:white;">
+
         {{ form.album }}
+         <label for="{{ form.album.id_for_label }}">Album:</label>
       </div>
 
-      <div class="form-group">
-        <label for="{{ form.image.id_for_label }}">Image:</label>
+      <div class="form-group" style="color:white;">
+
         {{ form.image }}
+         <label for="{{ form.image.id_for_label }}">Image:</label>
       </div>
 
-      <div class="form-group">
-        <label for="{{ form.cover_image.id_for_label }}">Cover Image:</label>
+      <div class="form-group" style="color:white;">
+
         {{ form.cover_image }}
+        <label for="{{ form.cover_image.id_for_label }}">Cover Image:</label>
       </div>
 
-      <div class="form-group">
-        <label for="{{ form.description.id_for_label }}">Description:</label>
+      <div class="form-group" style="color:white;">
+
         {{ form.description }}
+         <label for="{{ form.description.id_for_label }}">Description:</label>
       </div>
 
-      <div class="form-group">
-        <label for="{{ form.year.id_for_label }}">Year:</label>
+      <div class="form-group" style="color:white;">
+
         {{ form.year }}
+        <label for="{{ form.year.id_for_label }}">Year:</label>
       </div>
 
-      <div class="form-group">
-        <label for="{{ form.duration.id_for_label }}">Duration:</label>
+      <div class="form-group" style="color:white;">
+
         {{ form.duration }}
+                <label for="{{ form.duration.id_for_label }}">Duration:</label>
       </div>
 
-      <div class="form-group">
-        <label for="{{ form.file.id_for_label }}">File:</label>
+      <div class="form-group" style="color:white;">
+
         {{ form.file }}
+         <label for="{{ form.file.id_for_label }}">File:</label>
       </div>
 
-      <div class="form-group">
-        <label for="{{ form.listens.id_for_label }}">Listens:</label>
+      <div class="form-group" style="color:white;">
+
         {{ form.listens }}
+          <label for="{{ form.listens.id_for_label }}">Listens:</label>
       </div>
 
       <button type="submit" class="btn btn-primary">Save Music</button>
     </form>
   </div>
 {% endblock %}
+
