--- a/templates/music/player.html
+++ b/templates/music/player.html
@@ -1,29 +1,55 @@
-
+{% load static %}
 {% block player %}
 
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+<head>
 
+    <meta charset="utf-8">
+    <title>Document</title>
 
-
-<link href="button.css" rel="stylesheet" />
-<div class="bottom margin">
-    <input type="range" name="range" id="ProgressBar" min="0" max="100" />
-    <div class="songinfo-container">
-        <div class="songinfo">
-            <span id="masterSongName"> CNCO - Tan Facil</span>
+    <link rel="stylesheet" href="{% static 'css/player.css' %}">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+</head>
+<body>
+{% for song in musics %}
+<div class="container show-controls">
+    <div class="wrapper">
+        <div class="video-timeline">
+            <div class="progress-area">
+                <span>00:00</span>
+                <div class="progress-bar"></div>
+            </div>
         </div>
-        <div class="songinfo-img">
-            <img src="https://iscale.iheart.com/catalog/artist/31116368" alt="artist photo" id="gif" />
-        </div>
-        <div class="icon">
-            <i class="fas fa-2x fa-step-backward" id="previous"></i>
-            <i class="fa fa-2x fa-play-circle" aria-hidden="true"></i>
-            <i class="fas fa-2x fa-step-forward" id="next"></i>
-        </div>
+        <ul class="video-controls">
+            <li class="options left">
+                <button class="volume"><i class="fa-solid fa-volume-high"></i></button>
+                <input type="range" min="0" max="1" step="any">
+                <div class="video-timer">
+                    <p class="current-time">00:00</p>
+                    <p class="separator"> / </p>
+                    <p class="video-duration">{{song.duration}}</p>
+                </div>
+            </li>
+            <li class="options center">
+                <button class="skip-backward"><i class="fas fa-backward"></i></button>
+                <button class="play-pause"><i class="fas fa-play"></i></button>
+                <button class="skip-forward"><i class="fas fa-forward"></i></button>
+            </li>
+            <li class="options right">
+                <div class="playback-content">
+                </div>
+            </li>
+        </ul>
     </div>
+    <video src=""></video>
 </div>
+<end
+<script src="{% static "css/player.js" %}"></script>
 
-{% endblock %}
-
-
-<!--<script src="https://kit.fontawesome.com/23cecef777.js" crossorigin="anonymous"></script>-->
 </body>
+</html>
+{% endblock %}
